--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,14 @@ sub { bottom: -.25em; }
 .cf { *zoom: 1; }
 
 /*for all*/
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -101,35 +109,55 @@ li {
   margin: 0 auto;
 }
 
-/*=================================
-  Header styling starts here
-=================================*/
-
-
-
-/*=================================
-  Header styling ends here
-=================================*/  
 
 /*=================================
   main styling starts here
 =================================*/
 
+.load-more-section { padding: 30px; }
 
+h1 {
+  font-size: 32px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 300px;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 16px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
+  justify-content: center;
+  flex-direction: column;
+}
+
+.card-id {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-title {
+  padding: 10px;
+  font-size: 24px;
+}
 
 /*=================================
   main styling ends here
 =================================*/
 
-/*=================================
-  footer styling starts here
-=================================*/ 
 
-
-
- /*=================================
-  footer styling ends here
-=================================*/ 
 
 /*media query starts*/
 /*media query for 995px starts here*/
