--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ h1 {
   width: 300px;
   padding: 20px;
   border-radius: 5px;
-  margin: 16px;
+  margin: 10px;
   display: flex;
   align-items: center;
   box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
@@ -140,8 +140,8 @@ h1 {
 }
 
 .card-id {
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -150,7 +150,20 @@ h1 {
 
 .card-title {
   padding: 10px;
-  font-size: 24px;
+  font-size: 18px;
+}
+
+.btn {
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.load-more {
+  padding: 8px 16px;
+}
+.load-more.remove  {
+  display: none;
 }
 
 /*=================================
